alteração de códigos de resposta
